03-replica-set.yml

apiVersion: v1
kind: Pod
metadata:
  name: rs-01-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: docker.io/nginx

## Always maintain unique labels.
