04-fail-container.yml
apiVersion: v1
kind: Pod
metadata:
  name: sleep
spec:
  containers:
    - name: nginx
      image: redhat/ubi9
