05-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-01
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: docker.io/nginx:1.24
