11-rbac.yml
# role-based access control (RBAC)
---
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: default
spec:
  serviceAccountName: debug
  containers:
    - name: debug
      image: rkalluru/debug
