13-security-context.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    appType: API
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
    - name: nginx
      image: rkalluru/debug
