06-service.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-06
  labels:
    appName: nginx
    example: service
spec:
  containers:
    - name: nginx
      image: docker.io/nginx

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-06
spec:
  selector:
    appName: nginx
    example: service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: debug-06
spec:
  containers:
    - name: debug
      image: docker.io/rkalluru/debug

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-06-np
spec:
  type: NodePort
  selector:
    appName: nginx
    example: service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-06-lb
spec:
  type: LoadBalancer
  selector:
    appName: nginx
    example: service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx-06-headless
#spec:
#  selector:
#    appName: nginx
#    type: deploy
#  clusterIP: None
#  ports:
#    - protocol: TCP
#      port: 80
#      targetPort: 80
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: deploy-06
#  labels:
#    appName: nginx
#    type: deploy
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      appName: nginx
#      type: deploy
#  template:
#    metadata:
#      labels:
#        appName: nginx
#        type: deploy
#    spec:
#      containers:
#        - name: nginx
#          image: docker.io/nginx:1.24
#
#
#
